# django-sveve

./: .editorconfig  .pre-commit-config.yaml  MANIFEST.in  README.md  requirements_dev.txt  setup.cfg
sveve/: admin.py  apps.py  contact_provider.py  models.py  tests.py  urls.py  views.py
sveve/locale/no/LC_MESSAGES/: django.po
sveve/migrations/: 0001_initial.py  0002_contact_active_alter_contact_first_name_and_more.py  0003_contact_source.py
sveve/services/: __init__.py
sveve/templates/admin/: contact_changelist.html  create_group.html  csv_form.html  send_message.html  send_message_to_contact.html  send_message_to_group.html
sveve/templates/admin/partials/: message_box.html
website/: settings.py  urls.py
