[metadata]
name = django-sveve
version = 0.1.0
description = A simple, reusable app for django adding support the sending SMS using the Sveve API.
long_description = file: README.markdown
url = https://github.com/weholt/django-sveve
author = Thomas Weholt
author_email = thomas@weholt.org
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.1
    django-environ
    requests
